<resources>
    <string name="app_name">FriendsManager</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="latest_friend">Latest Friend:</string>
    <string name="last_deleted_friend">Last Deleted Friend:</string>
    <string name="total_friends">Total Friends:</string>
    <string name="ask_for_activity">Ask for Activity</string>
    <string name="friendslist">Friendslist</string>
    <string name="name">Name:</string>
    <string name="mobile_phone_hint">Mobile Phone</string>
    <string name="ask_your_friend_with_n_a_personal_text_message_n_for_an_activity">Ask your friend with\n a personal text message\n for an Activity</string>
    <string name="send_sms">Send SMS</string>
    <string name="name_only">Name</string>
    <string name="birthday">Birthday d/m/yyyy</string>
    <string name="total_friends_list">Total friends:</string>
    <string name="_0">0</string>
    <string name="email_hint">Email</string>
    <string name="logo">logo</string>
    <string name="back_button">back button</string>
    <string name="add_friends">add friends</string>
    <string name="delete">delete</string>
    <string name="send_email">send Email</string>
    <string name="contact_information">contact information</string>
    <string name="friendsmanager_logo">Friendsmanager Logo</string>
</resources>
