<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abertay.friendsmanager.AddFriendsActivity"
    android:orientation="vertical"
    android:background="@drawable/general_background"
    android:id="@+id/layoutAddActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:src="@drawable/add_new_friend"
        android:gravity="center"
        android:contentDescription="@string/logo"
        android:id="@+id/addNewFriend"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addNewFriend"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:maxLength="20"
        android:gravity="center"
        android:hint="@string/name_only"
        android:inputType="textPersonName"
        android:id="@+id/nameAdd"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameAdd"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:maxLength="15"
        android:gravity="center"
        android:hint="@string/mobile_phone_hint"
        android:inputType="phone"
        android:id="@+id/mobilePhoneAdd"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobilePhoneAdd"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:maxLength="10"
        android:gravity="center"
        android:hint="@string/birthday"
        android:inputType="date"
        android:id="@+id/birthdayAdd"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthdayAdd"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:maxLength="40"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:id="@+id/emailAdd"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@drawable/ic_add_circle_outline_black_75dp"
        android:contentDescription="@string/add_friends"
        android:id="@+id/addFriends"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_arrow_back_black_48dp"
        android:contentDescription="@string/back_button"
        android:id="@+id/backButton"/>

</RelativeLayout>
