<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    android:orientation="vertical"
    tools:context="com.abertay.friendsmanager.EditFriendActivity"
    android:id="@+id/editFriendLayout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:src="@drawable/edit_friend_logo"
        android:contentDescription="@string/logo"
        android:id="@+id/editFriendLogo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFriendLogo"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:ellipsize="end"
        android:maxLength="20"
        android:gravity="center"
        android:text="@string/name_only"
        android:hint="@string/name_only"
        android:textColor="#000000"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        android:id="@+id/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:maxLength="15"
        android:gravity="center"
        android:text="@string/mobile_phone_hint"
        android:hint="@string/mobile_phone_hint"
        android:textColor="#000000"
        android:inputType="phone"
        tools:ignore="LabelFor"
        android:id="@+id/mobilePhone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobilePhone"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:maxLength="10"
        android:gravity="center"
        android:text="@string/birthday"
        android:hint="@string/birthday"
        android:textColor="#000000"
        android:inputType="date"
        tools:ignore="LabelFor"
        android:id="@+id/birthday" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:background="@drawable/oval_style"
        android:maxLength="40"
        android:gravity="center"
        android:text="@string/email_hint"
        android:hint="@string/email_hint"
        android:textColor="#000000"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor"
        android:id="@+id/email" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@drawable/ic_check_circle_black_75dp"
        android:contentDescription="@string/delete"
        android:id="@+id/commitChange"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_arrow_back_black_48dp"
        android:contentDescription="@string/back_button"
        android:id="@+id/backButton"/>

</RelativeLayout>